# project2

./: README.txt  comp_phys_project_2_report_latex.tex  main.py  pyproject.toml
fission/: __init__.py  analysis.py  particle.py  reaction.py  simulation.py
fission.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
