
[project]
name = "fission"
version = "1.4.8"
dependencies = [
   "numpy",
   "scipy",
]
authors = [
  { name="Kevin Mesta", email="kmmesta@syr.edu" },
  { name="Sara Talebi", email="stalebi@syr.edu" },
]
description = "Nuclear fission reaction package"
readme = "README.txt"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
main_script = "fission:main_program"
heat_vs_uranium = "fission:heat_vs_uranium"
heatmap = "fission:heatmap"
heattime = "fission:heattime_vs_simulations"
