
[project]
name = "fission"
version = "1.5.9"
dependencies = [
   "numpy",
   "scipy",
   "math3",
   "statistics"
]
authors = [
  { name="Kevin Mesta", email="kmmesta@syr.edu" },
  { name="Sara Talebi", email="stalebi@syr.edu" },
]
description = "Nuclear fission reaction package"
readme = "README.txt"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
main_script = "fission:main_program"
heat_vs_uranium = "fission:heat_vs_uranium"
heatmap = "fission:heatmap"
heattime = "fission:heattime_vs_simulations"
uranium_time = "fission:computation_vs_uraniums"
neutron_time = "fission:computation_vs_neutrons"
heat_vs_dt = "fission:heattime_vs_timestep"
